logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
C:\Program Files\lib\bluejcore.jar;C:\Program Files\lib\junit-4.11.jar;C:\Program Files\lib\hamcrest-core-1.3.jar;C:\Program Files\lib\lang-stride.jar;C:\Program Files\lib\javafx\lib\javafx.base.jar;C:\Program Files\lib\javafx\lib\javafx.controls.jar;C:\Program Files\lib\javafx\lib\javafx.fxml.jar;C:\Program Files\lib\javafx\lib\javafx.graphics.jar;C:\Program Files\lib\javafx\lib\javafx.media.jar;C:\Program Files\lib\javafx\lib\javafx.properties.jar;C:\Program Files\lib\javafx\lib\javafx.swing.jar;C:\Program Files\lib\javafx\lib\javafx.web.jar;C:\Users\Hope\Documents\OOP\StockMini
-d
C:\Users\Hope\Documents\OOP\StockMini\doc
-encoding
UTF-8
-charset
UTF-8
C:\Users\Hope\Documents\OOP\StockMini\Investment.java
<---- end of javadoc command ---->
Loading source file C:\Users\Hope\Documents\OOP\StockMini\Investment.java...
C:\Users\Hope\Documents\OOP\StockMini\Investment.java:30: error: illegal start of type
}
^
1 error
